--- a/src/main/resources/static/schedule/schedulelist.html
+++ b/src/main/resources/static/schedule/schedulelist.html
@@ -32,12 +32,9 @@
             color: #cccccc;
         }
 
-        .layui-card {
+        .scheduleListChList {
             background-color: #313335;
-        }
-
-        .layui-card-header {
-            border-color: #8d8d8d;
+            border-bottom: 1px solid #8d8d8d;
             color: #cccccc;
         }
 
@@ -67,54 +64,52 @@
 <!--日程任务列表总列表-->
 <div>
     <!--日程任务增加-->
-    <div>
-        <div class="layui-form" id="scheduleAddForm">
-            <form>
-                <input type="hidden" name="id" id="scheduleId"/>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">标题</label>
-                    <div class="layui-input-block">
-                        <input type="text" name="title" lay-verify="required" placeholder="" autocomplete="off"
-                               class="layui-input">
+    <div class="layui-form" id="scheduleAddForm">
+        <form>
+            <input type="hidden" name="id" id="scheduleId"/>
+            <div class="layui-form-item">
+                <label class="layui-form-label">标题</label>
+                <div class="layui-input-block">
+                    <input type="text" name="title" lay-verify="required" placeholder="" autocomplete="off"
+                           class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label class="layui-form-label">优先级</label>
+                    <div class="layui-input-inline">
+                        <select name="priority" lay-verify="required">
+                            <option value="">请选择优先级</option>
+                            <option value="0">高</option>
+                            <option value="1">中</option>
+                            <option value="2">低</option>
+                        </select>
                     </div>
                 </div>
-                <div class="layui-form-item">
-                    <div class="layui-inline">
-                        <label class="layui-form-label">优先级</label>
-                        <div class="layui-input-inline">
-                            <select name="priority" lay-verify="required">
-                                <option value="">请选择优先级</option>
-                                <option value="0">高</option>
-                                <option value="1">中</option>
-                                <option value="2">低</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">进度</label>
-                        <div class="layui-input-inline">
-                            <select name="status" lay-verify="required">
-                                <option value="1">开始</option>
-                                <option value="-1">结束</option>
-                                <option value="0">挂起</option>
-                            </select>
-                        </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">进度</label>
+                    <div class="layui-input-inline">
+                        <select name="status" lay-verify="required">
+                            <option value="1">开始</option>
+                            <option value="-1">结束</option>
+                            <option value="0">挂起</option>
+                        </select>
                     </div>
                 </div>
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">详细内容</label>
-                    <div class="layui-input-block">
-                        <textarea name="text" placeholder="" class="layui-textarea"></textarea>
-                    </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+                <label class="layui-form-label">详细内容</label>
+                <div class="layui-input-block">
+                    <textarea name="text" placeholder="" class="layui-textarea"></textarea>
                 </div>
-                <div class="layui-form-item">
-                    <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit="" lay-filter="scheduleForm">提交</button>
-                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-                    </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <button class="layui-btn" lay-submit="" lay-filter="scheduleForm">提交</button>
+                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
     <div id="schedulelist" class="layui-collapse" lay-accordion></div>
 </div>
