--- a/src/main/resources/static/schedule/schedulelist.html
+++ b/src/main/resources/static/schedule/schedulelist.html
@@ -117,7 +117,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="schedulelist.js"></script>
 <script type="text/javascript">
-    schedulelist.init();
+    schedulelist.init(0, 50);
 </script>
 </body>
 </html>
