--- a/src/main/resources/static/schedule/schedulelist.html
+++ b/src/main/resources/static/schedule/schedulelist.html
@@ -111,6 +111,22 @@
             </div>
         </form>
     </div>
+    <div class="layui-form">
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">开始日期</label>
+                <div class="layui-input-inline" style="width: 300px;">
+                    <input type="text" class="layui-input" name="rangeDate" id="rangeDate" placeholder="yyyy-MM-dd yyyy-MM-dd" lay-key="1">
+                </div>
+            </div>
+            <div class="layui-inline">
+                <button class="layui-btn" lay-submit="" lay-filter="scheduleFormTerm">查询</button>
+                <button class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </div>
+
+
+    </div>
     <div id="schedulelist" class="layui-collapse" lay-accordion></div>
 </div>
 
